--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -7,32 +7,24 @@
 >
 
 <h:head>
-    <!--<h:outputStylesheet name="common-style.css" library="css" /> -->
+    <h:outputStylesheet library="bootstrap-4.1.3-dist" name="bootstrap.css"/>
 </h:head>
 
 <h:body>
-
-    <div id="page">
-
-        <div id="header">
-            <ui:insert name="header" >
-                <ui:include src="/templates/defHeader.xhtml" />
-            </ui:insert>
-        </div>
-
-        <div id="content">
-            <ui:insert name="content" >
-                <ui:include src="/templates/defContent.xhtml" />
-            </ui:insert>
-        </div>
-
-        <div id="footer">
-            <ui:insert name="footer" >
-                <ui:include src="/templates/defFooter.xhtml" />
-            </ui:insert>
-        </div>
-
+    <div id="header">
+        <ui:insert name="header" >
+            <ui:include src="/templates/defHeader.xhtml" />
+        </ui:insert>
     </div>
-
+    <div class="container">
+        <ui:insert name="content" >
+            <ui:include src="/templates/defContent.xhtml" />
+        </ui:insert>
+    </div>
+    <div id="footer">
+        <ui:insert name="footer" >
+            <ui:include src="/templates/defFooter.xhtml" />
+        </ui:insert>
+    </div>
 </h:body>
 </html>
