--- a/src/main/webapp/templates/loginLayout.xhtml
+++ b/src/main/webapp/templates/loginLayout.xhtml
@@ -8,19 +8,13 @@
 
 <h:head>
     <h:outputStylesheet library="bootstrap-4.1.3-dist" name="css/bootstrap.css"/>
+    <h:outputStylesheet name="style.css"/>
 </h:head>
 
 <h:body>
-    <div id="header">
-        <ui:insert name="header" >
-            <ui:include src="/templates/defHeader.xhtml" />
-        </ui:insert>
-    </div>
-    <div class="container">
         <ui:insert name="content" >
             <ui:include src="/templates/defContent.xhtml" />
         </ui:insert>
-    </div>
     <div id="footer">
         <ui:insert name="footer" >
             <ui:include src="/templates/defFooter.xhtml" />
