login and register

--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -1,5 +1,5 @@
 body{
-    background: #DE6262;e
+    background: #DE6262;
 }
 .login-block{
     background: #DE6262;  /* fallback for old browsers */
