--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -8,6 +8,9 @@
 
 <h:head>
     <h:outputStylesheet library="bootstrap-4.1.3-dist" name="bootstrap.css"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <title>  Travelmore | <ui:insert name="title"></ui:insert>
+    </title>
 </h:head>
 
 <h:body>
@@ -17,6 +20,7 @@
         </ui:insert>
     </div>
     <div class="container">
+        <h1><ui:insert name="title"></ui:insert></h1>
         <ui:insert name="content" >
             <ui:include src="/templates/defContent.xhtml" />
         </ui:insert>
@@ -26,5 +30,11 @@
             <ui:include src="/templates/defFooter.xhtml" />
         </ui:insert>
     </div>
+    <script src="#{request.contextPath}/resources/js/jquery-3.3.1.min.js"></script>
+    <script src="#{request.contextPath}/resources/js/popper.min.js"></script>
+    <script src="#{request.contextPath}/resources/js/bootstrap.min.js"></script>
+    <h:outputScript library="js" src="jquery-3.3.1.min.js" />
+    <h:outputScript library="js" src="popper.min.js" />
+    <h:outputScript library="js" src="bootstrap.min.js" />
 </h:body>
 </html>
