--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -7,7 +7,7 @@
 >
 
 <h:head>
-    <h:outputStylesheet library="bootstrap-4.1.3-dist" name="bootstrap.css"/>
+    <h:outputStylesheet library="bootstrap-4.1.3-dist" name="css/bootstrap.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <title>  Travelmore | <ui:insert name="title"></ui:insert>
     </title>
