--- a/src/main/webapp/templates/adminHeader.xhtml
+++ b/src/main/webapp/templates/adminHeader.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <ui:composition>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/travelmore/admin">
                 <h:graphicImage height="80px" library="images" name="headerlogo_transparent.png" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,13 +13,13 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/">Boekingen <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/travelmore/admin">Boekingen <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Reizen</a>
+                        <a class="nav-link" href="/travelmore/admin/reizen.xhtml">Reizen</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Locaties</a>
+                        <a class="nav-link" href="/travelmore/admin/locaties.xhtml">Locaties</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Gebruikers</a>
