--- a/src/main/webapp/templates/defHeader.xhtml
+++ b/src/main/webapp/templates/defHeader.xhtml
@@ -4,9 +4,12 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <ui:composition>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/">Travelmore</a>
+            <a class="navbar-brand" href="/">
+                <img src="../resources/images/logos/playstore-icon.png" width="30" height="30" alt=""/>
+                Travelmore
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <!--<span class="navbar-toggler-icon"></span>-->
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
@@ -27,4 +30,5 @@
             </div>
         </nav>
     </ui:composition>
+
 </html>
