--- a/src/main/webapp/templates/defHeader.xhtml
+++ b/src/main/webapp/templates/defHeader.xhtml
@@ -14,6 +14,12 @@
                     right:auto;
                 }
             }
+
+            .navbar{
+                background-color: #00716C !important;
+            }
+
+
         </style>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">
