--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -9,6 +9,7 @@
 <h:head>
     <h:outputStylesheet library="bootstrap-4.1.3-dist" name="css/bootstrap.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <h:outputStylesheet name="style2.css"/>
     <title>  Travelmore | <ui:insert name="title"></ui:insert>
     </title>
 </h:head>
@@ -19,6 +20,13 @@
             <ui:include src="/templates/defHeader.xhtml" />
         </ui:insert>
     </div>
+    <div id="carousel">
+        <ui:insert name="carousel" >
+            <ui:include src="/templates/carousel.xhtml" />
+        </ui:insert>
+    </div>
+
+
     <div class="container">
         <br/>
         <h1><ui:insert name="title"></ui:insert></h1>
@@ -31,6 +39,8 @@
             <ui:include src="/templates/defFooter.xhtml" />
         </ui:insert>
     </div>
+
+
     <script src="#{request.contextPath}/resources/js/jquery-3.3.1.min.js"></script>
     <script src="#{request.contextPath}/resources/js/popper.min.js"></script>
     <script src="#{request.contextPath}/resources/js/bootstrap.min.js"></script>
