--- a/src/main/webapp/templates/carousel.xhtml
+++ b/src/main/webapp/templates/carousel.xhtml
@@ -10,14 +10,14 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="./resources/images/vliegtuig.jpg" alt="Vliegtuig"/>
+                    <img class="d-block w-100" src="/travelmore/resources/images/vliegtuig.jpg" alt="Vliegtuig"/>
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Vliegtuig</h5>
                         <p>Wij bij travelmore bieden kwaliteitsvolle vliegtuig reizen over de hele wereld.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="./resources/images/bus.jpg" alt="Bus"/>
+                    <img class="d-block w-100" src="/travelmore/resources/images/bus.jpg" alt="Bus"/>
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Bus</h5>
                         <p>Wij bij travelmore bieden kwaliteitsvolle busdiensten.</p>
