--- a/src/main/webapp/templates/defHeader.xhtml
+++ b/src/main/webapp/templates/defHeader.xhtml
@@ -2,64 +2,41 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
+
     <ui:composition>
-        <!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
-            <!--<a class="navbar-brand" href="/">-->
-                <!--<img src="../resources/images/logos/playstore-icon.png" width="30" height="30" alt=""/>-->
-                <!--Travelmore-->
-        <style>
-            .test {
-                right: 0;
-                left: auto;
-            }
-            @media (max-width: 992px) {
-                .test {
-                    left: 0;
-                    right:auto;
-                }
-            }
-
-            .navbar{
-                background-color: #00716C !important;
-            }
-
-
-        </style>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">
-                <h:graphicImage height="80px" library="images" name="headerlogo_transparent.png" />
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <!--<span class="navbar-toggler-icon"></span>-->
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Reizen</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Bookingen</a>
-                    </li>
-                    <li class="nav-item dropdown">
-
-                    </li>
-                </ul>
-                <span class="navbar-text">
-                    <h:outputLink value = "/travelmore/bezoeker/login.xhtml" rendered="#{GebruikerController.getAangemeld() == false}">Meld aan</h:outputLink>
-                </span>
-                <h:panelGroup class="nav-item dropdown" rendered="#{GebruikerController.getAangemeld()}">
-                    <a class="nav-link dropdown-toggle navbar-text active" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        #{GebruikerController.aangemeldeGebruiker.naam}
+        <nav class="navbar navbar-default navbar-fixed-top navbar-expand-md order-md-0">
+            <div class="container">
+                <div class="navbar-header">
+                    <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarText" aria-expanded="false" aria-label="Toggle navigation">-->
+                        <!--<span class="sr-only">Toggle navigation</span>-->
+                        <!--<span><i class="material-icons">menu</i></span>-->
+                    <!--</button>-->
+                    <a class="navbar-brand" href="/travelmore/" title="HOME">
+                        <h:graphicImage height="60px" library="images" name="navheader.png" />
+                        Travel<span>More</span>
                     </a>
-                    <div class="dropdown-menu test" aria-labelledby="navbarDropdownMenuLink">
-                        <h:button value="Uitloggen" class="dropdown-item" outcome="#{GebruikerController.logout()}" />
-                    </div>
-                </h:panelGroup>
+                </div>
+                <div class="collapse navbar-collapse w-75 order-1" id="navbarText">
+                    <ul class="nav navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/travelmore/">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/travelmore/reizen">Reizen</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="travelmore/bookingen">Bookingen</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="collapse navbar-collapse text-right w-auto order-2" id="navbarText2">
+                    <ul class="nav navbar-nav mr-auto">
+                        <li class="nav-item navbar-right">
+                            <a class="nav-link" href="travelmore/meldaan">Aanmelden</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </ui:composition>
-
 </html>
