--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -1,25 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html lang="nl_BE"
+      xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
->
+      xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
+    <!-- Required meta tags -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no"/>
+
+    <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicon.png']}"/>
+
+    <!-- Styles -->
     <h:outputStylesheet library="bootstrap-4.1.3-dist" name="css/bootstrap.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <h:outputStylesheet name="style2.css"/>
-    <title>  Travelmore | <ui:insert name="title"></ui:insert>
-    </title>
-</h:head>
+    <h:outputStylesheet name="style.css"/>
 
+    <!-- Title -->
+    <title>  Travelmore | <ui:insert name="title"></ui:insert></title>
+</h:head>
 <h:body>
     <div id="header">
         <ui:insert name="header" >
             <ui:include src="/templates/defHeader.xhtml" />
         </ui:insert>
     </div>
+
+
     <div id="carousel">
         <ui:insert name="carousel" >
             <ui:include src="/templates/carousel.xhtml" />
