--- a/src/main/webapp/templates/loginLayout.xhtml
+++ b/src/main/webapp/templates/loginLayout.xhtml
@@ -6,7 +6,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
     <h:outputStylesheet library="bootstrap-4.1.3-dist" name="css/bootstrap.css"/>
-    <h:outputStylesheet name="style.css"/>
+    <h:outputStylesheet name="style2.css"/>
 </h:head>
 
 <h:body>
