paden juist zetten

--- a/src/main/webapp/templates/defHeader.xhtml
+++ b/src/main/webapp/templates/defHeader.xhtml
@@ -33,12 +33,12 @@
 
                         <ui:fragment rendered="#{ViewController.activeTab=='reizen'}">
                             <li class="nav-item active">
-                                <a class="nav-link" href="">Reizen</a>
+                                <a class="nav-link" href="/travelmore/datatable.xhtml">Reizen</a>
                             </li>
                         </ui:fragment>
                         <ui:fragment rendered="#{ViewController.activeTab!='reizen'}">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Reizen</a>
+                                <a class="nav-link" href="/travelmore/datatable.xhtml">Reizen</a>
                             </li>
                         </ui:fragment>
 
