--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -95,8 +95,8 @@ ul.nav.navbar-nav.navbar-right{
     background: #e8f9ff;
 }
 
-.navbar-toggler-icon{
-    background-color: #009cab;
+.navbar-toggler-icon i{
+    color: #f04c25;
 }
 
 /* FOOTER */
