--- a/src/main/webapp/templates/defHeader.xhtml
+++ b/src/main/webapp/templates/defHeader.xhtml
@@ -10,7 +10,7 @@
                     Travel<span>More</span>
                 </a>
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"><i class="fas fa-bars fa-2x"></i></span>
                 </button>
                 <div class="collapse navbar-collapse w-75 order-1" id="navbarText">
                     <ul class="nav navbar-nav mr-auto">
@@ -24,7 +24,6 @@
                                 <h:outputLink value = "/travelmore/" styleClass="nav-link">Home</h:outputLink>
                             </li>
                         </ui:fragment>
-
                         <ui:fragment rendered="#{ViewController.activeTab=='reizen'}">
                             <li class="nav-item active">
                                 <h:outputLink value = "/travelmore/reizen.xhtml" styleClass="nav-link">Reizen</h:outputLink>
@@ -36,14 +35,14 @@
                             </li>
                         </ui:fragment>
 
-                        <ui:fragment rendered="#{ViewController.activeTab=='bookingen'}">
+                        <ui:fragment rendered="#{ViewController.activeTab=='boekingen'}">
                             <li class="nav-item active">
-                                <h:outputLink value = "/travelmore/bookingen.xhtml" styleClass="nav-link">Bookingen</h:outputLink>
+                                <h:outputLink value = "/travelmore/boekingen.xhtml" styleClass="nav-link">Boekingen</h:outputLink>
                             </li>
                         </ui:fragment>
                         <ui:fragment rendered="#{ViewController.activeTab!='bookingen'}">
                             <li class="nav-item">
-                                <h:outputLink value = "/travelmore/bookingen.xhtml" styleClass="nav-link">Bookingen</h:outputLink>
+                                <h:outputLink value = "/travelmore/boekingen.xhtml" styleClass="nav-link">Boekingen</h:outputLink>
                             </li>
                         </ui:fragment>
                     </ul>
