--- a/src/main/webapp/templates/defHeader.xhtml
+++ b/src/main/webapp/templates/defHeader.xhtml
@@ -36,12 +36,12 @@
                             </li>
                         </ui:fragment>
 
-                        <ui:fragment rendered="#{ViewController.activeTab=='bookingen'}">
+                        <ui:fragment rendered="#{ViewController.activeTab=='bookingen' and GebruikerController.aangemeld==true}">
                             <li class="nav-item active">
                                 <h:outputLink value = "/travelmore/gebruiker/bookingen.xhtml" styleClass="nav-link">Bookingen</h:outputLink>
                             </li>
                         </ui:fragment>
-                        <ui:fragment rendered="#{ViewController.activeTab!='bookingen'}">
+                        <ui:fragment rendered="#{ViewController.activeTab!='bookingen'  and GebruikerController.aangemeld==true}">
                             <li class="nav-item">
                                 <h:outputLink value = "/travelmore/gebruiker/bookingen.xhtml" styleClass="nav-link">Bookingen</h:outputLink>
                             </li>
