--- a/src/main/webapp/templates/defHeader.xhtml
+++ b/src/main/webapp/templates/defHeader.xhtml
@@ -16,12 +16,12 @@
                     <ul class="nav navbar-nav mr-auto">
                         <ui:fragment rendered="#{ViewController.activeTab=='home'}">
                             <li class="nav-item active">
-                                <h:outputLink value = "index.xhtml" styleClass="nav-link">Home</h:outputLink>
+                                <h:outputLink value = "/travelmore/" styleClass="nav-link">Home</h:outputLink>
                             </li>
                         </ui:fragment>
                         <ui:fragment rendered="#{ViewController.activeTab!='home'}">
                             <li class="nav-item">
-                                <h:outputLink value = "index.xhtml" styleClass="nav-link">Home</h:outputLink>
+                                <h:outputLink value = "/travelmore/" styleClass="nav-link">Home</h:outputLink>
                             </li>
                         </ui:fragment>
                         <ui:fragment rendered="#{ViewController.activeTab=='reizen'}">
