Totaal niet belangerijk maar er is nu pageloading!

--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -223,10 +223,60 @@ ul.nav.navbar-nav.navbar-right{
 .btn-login:hover, .btn-login:active{
     background: rgba(255, 91, 48, 0.71);
 }
-/*.banner-text{width:70%; position:absolute; bottom:40px; padding-left:20px;}*/
-/*.banner-text h2{color:#fff; font-weight:600;}*/
-/*.banner-text h2:after{content:" "; width:100px; height:5px; background:#FFF; display:block; margin-top:20px; border-radius:3px;}*/
-/*.banner-text p{color:#fff;}*/
+
+/* LOADER */
+#loader {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 1;
+    margin: -75px 0 0 -75px;
+    width: 194px;
+    height: 194px;
+    background-image: url(#{request.contextPath}/resources/images/loading.png) ;
+    background-attachment: scroll;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+#loader .circle{
+    border: 12px solid transparent;
+    border-top: 12px solid #009cab;
+    border-bottom: 12px solid #009cab;
+    border-right: 12px solid #009cab;
+    border-radius: 50%;
+    width: 194px;
+    height: 194px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 1s linear infinite;
+}
+.animate-bottom {
+    position: relative;
+    -webkit-animation-name: animatebottom;
+    -webkit-animation-duration: 1s;
+    animation-name: animatebottom;
+    animation-duration: 1s
+}
+
+/* ANIMATIONS */
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+@-webkit-keyframes animatebottom {
+    from { bottom:-100px; opacity:0 }
+    to { bottom:0px; opacity:1 }
+}
+
+@keyframes animatebottom {
+    from{ bottom:-100px; opacity:0 }
+    to{ bottom:0; opacity:1 }
+}
 
 /* MEDIA QUERIES */
 @media (max-width: 576px) {
